# ventriscar-nnunet-ext

./: .gitignore  pyproject.toml
examples/: predict_example.py
src/nnunetv2_ext/: manage.py
src/nnunetv2_ext/nets/: UxLSTMBot_2d.py  UxLSTMBot_3d.py  UxLSTMEnc_2d.py  UxLSTMEnc_3d.py  vision_lstm.py
src/nnunetv2_ext/training/nnUNetTrainer/: nnUNetTrainerUxLSTMBot.py  nnUNetTrainerUxLSTMEnc.py  nnUNetTrainerUxLSTMEncNoAMP.py
src/ventriscar_nnunet_ext/nets/: UxLSTMBot_2d.py  UxLSTMBot_3d.py  UxLSTMEnc_3d.py  vision_lstm.py
src/ventriscar_nnunet_ext/patching/: patcher.py
