# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ventriscar-nnunet-ext"
version = "0.1.0"
description = "Custom nnU-Net extensions for the VentriScar project, including UxLSTM architectures and trainers."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "nnunetv2"
]

[project.scripts]
ventriscar-ext = "nnunetv2.manage:main"

[tool.setuptools.packages.find]
where = ["src"]  # Find packages in src directory