# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ventriscar-nnunet-ext"
version = "0.1.0"
description = "Custom nnU-Net extensions for the VentriScar project, including UxLSTM architectures and trainers."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch == 2.5.1",
    "nnunetv2==2.3.1",
    "SimpleITK==2.2.1",
    "batchgenerators==0.25",
    "acvl-utils==0.2.5",
    "tqdm==4.65.0",
    "numpy<2.0",
    "dynamic-network-architectures",
    "monai==1.1.0",
    "einops"
]

[tool.setuptools.packages.find]
where = ["src"]
